# chess_engine

./: CMakeLists.txt  README.md
include/engine/: Board.h  Types.h
include/engine/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
include/gui/: InputHandler.h  Renderer.h
src/: main.cpp
src/engine/: Board.cpp
src/engine/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/gui/: InputHandler.cpp  Renderer.cpp
